--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,7 @@
         </activity>
 
         <activity android:name=".study.ModelSelect"></activity>
+        <activity android:name=".study.ChoiceSelect"></activity>
     </application>
 
 
