--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,14 @@
         </activity>
 
         <activity android:name=".study.ModelSelect"></activity>
+        <activity android:name=".game.game_select">
+            <intent-filter>
+                <action android:name="android.intent.action.GAME_SELET" />
+                <category android:name="android.intent.category.GAME_SELET" />
+            </intent-filter>
+        </activity>
+        <activity android:name=".game.game_main"></activity>
+        <activity android:name=".game.game"></activity>
     </application>
 
 
