--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 28
-    buildToolsVersion '25.0.3'
+    buildToolsVersion '28.0.3'
     defaultConfig {
         applicationId "com.dudes.dexin.bayae"
         minSdkVersion 21
@@ -20,7 +20,7 @@ android {
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
     androidTestImplementation('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
@@ -29,4 +29,6 @@ dependencies {
     implementation 'com.android.support.constraint:constraint-layout:2.0.0-beta3'
     testImplementation 'junit:junit:4.12'
     implementation 'com.android.support:recyclerview-v7:28.0.0'
+    implementation files('libs/fastjson-1.2.62.jar')
+    implementation 'com.squareup.okhttp3:okhttp:4.0.0'
 }
